# deepgemm-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  PLAN.md  README.md
.cargo/: config.toml
crates/candle-deepgemm/: Cargo.toml
crates/candle-deepgemm/src/: error.rs  gemm.rs  lib.rs  mqa.rs  tensor.rs
crates/deepgemm/: Cargo.toml
crates/deepgemm-sys/: Cargo.toml  build.rs
crates/deepgemm-sys/csrc/: deepgemm_c_api.cc  deepgemm_c_api.h  deepgemm_raw_gemm.cc  deepgemm_raw_gemm.h  deepgemm_raw_mqa.cc  deepgemm_raw_mqa.h  deepgemm_raw_runtime.cc  deepgemm_raw_runtime.h
crates/deepgemm-sys/src/: lib.rs
crates/deepgemm/src/: arch.rs  dtype.rs  error.rs  gemm.rs  lib.rs  mqa.rs  runtime.rs  source.rs  tensor.rs
